# mkrevealslides

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  rust.yml
docs/: README.md  config_file.md
examples/: sample_config.yml
examples/inline_images/: inline_images.yml
examples/inline_images/slides/: 1.md
examples/simple_example/: sample_config.yml
examples/simple_example/input/: 1_test.md  2.md
input/: 0.md  3.md  4.md
src/: conf.rs  error_handling.rs  errors.rs  io.rs  lib.rs  main.rs  parsing.rs  presentation.rs  slide.rs  val.rs
src/presentation/: io.rs  mod.rs
src/presentation/slide/: io.rs  mod.rs  parsing.rs
src/slide/: io.rs  mod.rs  parsing.rs
src/ui/: cli.rs  conf.rs  mod.rs
templates/: slides.html
tests/: test_presentation.rs
