[package]
name = "mkrevealslides"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Creates reveal.js presentations automatically from markdown files"
authors = ["Robert <xiurobert@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = { version = "1", default-features = false }
clap = { version = "3.2.8", features = ["cargo"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"