[package]
name = "mkrevealslides"
version = "0.8.6"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Creates reveal.js presentations automatically from markdown files"
authors = ["Robert <xiurobert@gmail.com>"]
homepage = "https://github.com/tinkertanker/mkrevealslides"
repository = "https://github.com/tinkertanker/mkrevealslides"
readme = "README.md"
keywords = ["markdown", "revealjs", "presentation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = { version = "1", default-features = false }
clap = { version = "3.2.8", features = ["cargo", "derive"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.138", features = ["derive"] }
serde_yaml = "0.8.24"
pulldown-cmark = "0.9.1"
anyhow = "1.0.58"
natord = "1.0.9"

[dev-dependencies]
tempfile = "3.3.0"